--- a/firmware_canceller_65.ioc
+++ b/firmware_canceller_65.ioc
@@ -82,8 +82,8 @@ Mcu.PinsNb=46
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G473VETx
-MxCube.Version=6.8.0
-MxDb.Version=DB.6.0.80
+MxCube.Version=6.10.0
+MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -194,7 +194,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -207,67 +207,69 @@ ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DAC1_Init-DAC1-false-HAL-true,4-MX_DAC2_Init-DAC2-false-HAL-true,5-MX_DAC3_Init-DAC3-false-HAL-true,6-MX_DAC4_Init-DAC4-false-HAL-true,7-MX_OPAMP1_Init-OPAMP1-false-HAL-true,8-MX_OPAMP3_Init-OPAMP3-false-HAL-true,9-MX_OPAMP4_Init-OPAMP4-false-HAL-true,10-MX_OPAMP5_Init-OPAMP5-false-HAL-true,11-MX_SPI3_Init-SPI3-false-HAL-true,12-MX_USART1_UART_Init-USART1-false-HAL-true,13-MX_USART3_UART_Init-USART3-false-HAL-true,14-MX_USB_Device_Init-USB_DEVICE-false-HAL-false
-RCC.ADC12Freq_Value=160000000
-RCC.ADC345Freq_Value=160000000
-RCC.AHBFreq_Value=160000000
-RCC.APB1Freq_Value=160000000
-RCC.APB1TimFreq_Value=160000000
-RCC.APB2Freq_Value=160000000
-RCC.APB2TimFreq_Value=160000000
+RCC.ADC12Freq_Value=144000000
+RCC.ADC345Freq_Value=144000000
+RCC.AHBFreq_Value=144000000
+RCC.APB1Freq_Value=144000000
+RCC.APB1TimFreq_Value=144000000
+RCC.APB2Freq_Value=144000000
+RCC.APB2TimFreq_Value=144000000
 RCC.CK48CLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.CRSFreq_Value=48000000
-RCC.CortexFreq_Value=160000000
+RCC.CortexFreq_Value=144000000
 RCC.EXTERNAL_CLOCK_VALUE=12288000
-RCC.FCLKCortexFreq_Value=160000000
-RCC.FDCANFreq_Value=160000000
+RCC.FCLKCortexFreq_Value=144000000
+RCC.FDCANFreq_Value=144000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=160000000
-RCC.HRTIM1Freq_Value=160000000
+RCC.HCLKFreq_Value=144000000
+RCC.HRTIM1Freq_Value=144000000
 RCC.HSE_VALUE=12000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=160000000
-RCC.I2C2Freq_Value=160000000
-RCC.I2C3Freq_Value=160000000
-RCC.I2C4Freq_Value=160000000
-RCC.I2SFreq_Value=160000000
+RCC.I2C1Freq_Value=144000000
+RCC.I2C2Freq_Value=144000000
+RCC.I2C3Freq_Value=144000000
+RCC.I2C4Freq_Value=144000000
+RCC.I2SFreq_Value=144000000
 RCC.IPParameters=ADC12Freq_Value,ADC345Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HRTIM1Freq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,QSPIFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
-RCC.LPTIM1Freq_Value=160000000
-RCC.LPUART1Freq_Value=160000000
+RCC.LPTIM1Freq_Value=144000000
+RCC.LPUART1Freq_Value=144000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
-RCC.PLLN=20
-RCC.PLLPoutputFreq_Value=160000000
-RCC.PLLQoutputFreq_Value=160000000
-RCC.PLLRCLKFreq_Value=160000000
-RCC.PWRFreq_Value=160000000
-RCC.QSPIFreq_Value=160000000
+RCC.PLLN=18
+RCC.PLLPoutputFreq_Value=144000000
+RCC.PLLQoutputFreq_Value=144000000
+RCC.PLLRCLKFreq_Value=144000000
+RCC.PWRFreq_Value=144000000
+RCC.QSPIFreq_Value=144000000
 RCC.RNGFreq_Value=48000000
-RCC.SAI1Freq_Value=160000000
-RCC.SYSCLKFreq_VALUE=160000000
+RCC.SAI1Freq_Value=144000000
+RCC.SYSCLKFreq_VALUE=144000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.UART4Freq_Value=160000000
-RCC.UART5Freq_Value=160000000
-RCC.USART1Freq_Value=160000000
-RCC.USART2Freq_Value=160000000
-RCC.USART3Freq_Value=160000000
+RCC.UART4Freq_Value=144000000
+RCC.UART5Freq_Value=144000000
+RCC.USART1Freq_Value=144000000
+RCC.USART2Freq_Value=144000000
+RCC.USART3Freq_Value=144000000
 RCC.USBFreq_Value=48000000
 RCC.VCOInputFreq_Value=16000000
-RCC.VCOOutputFreq_Value=320000000
+RCC.VCOOutputFreq_Value=288000000
 SH.COMP_DAC11_group.0=DAC1_OUT1,DAC_OUT1
 SH.COMP_DAC11_group.ConfNb=1
 SH.COMP_DAC12_group.0=DAC1_OUT2,DAC_OUT2
 SH.COMP_DAC12_group.ConfNb=1
 SH.COMP_DAC21_group.0=DAC2_OUT1,DAC_OUT1
 SH.COMP_DAC21_group.ConfNb=1
-SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 SPI3.CLKPhase=SPI_PHASE_2EDGE
 SPI3.CLKPolarity=SPI_POLARITY_LOW
-SPI3.CalculateBaudRate=2.5 MBits/s
+SPI3.CalculateBaudRate=18.0 MBits/s
 SPI3.DataSize=SPI_DATASIZE_8BIT
 SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize,TIMode,CLKPolarity,CLKPhase
